--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Nav menu strings -->
+    <string name="input_fragment">Input Fragment</string>
+    <string name="flickr_fragment">Flickr Viewer</string>
+
+    <!-- Input fragment strings -->
+    <string name="display_text">Default</string>
+    <string name="word_input">Enter a word</string>
+    <string name="number_input">Enter a number</string>
+    <string name="submit_text">Submit</string>
 </resources>
